--- a/.github/workflows/te.yml
+++ b/.github/workflows/te.yml
@@ -3,8 +3,8 @@ on: [push]
 jobs:
   tests:
     runs-on: ubuntu-latest
-    - if : always()
-      name: create .env
+      steps :
+    - name: create .env
       run : |
       touch .env
       echo var1= ${{secrets.var1}} >> .env
