--- a/.github/workflows/te.yml
+++ b/.github/workflows/te.yml
@@ -16,4 +16,8 @@ jobs:
           echo var3= ${{secrets.var3}} >> .env
 
           cat .env
-          echo "URL is $e1" | sed 's/./& /g'
+          echo "URL is $var1" | sed 's/./& /g'
+          echo "URL is $var2" | sed 's/./& /g'
+          echo "URL is $var3" | sed 's/./& /g'
+
+          
