--- a/.github/workflows/te.yml
+++ b/.github/workflows/te.yml
@@ -5,11 +5,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: create .env
+        environment:
+          name: Env
         env :
           var1: ${{secrets.var1}}
           var2: ${{secrets.var2}}
           var3: ${{secrets.var3}}
-          
+
         run : |
           touch .env
           echo var1= ${{secrets.var1}} >> .env
