--- a/.github/workflows/te.yml
+++ b/.github/workflows/te.yml
@@ -16,7 +16,7 @@ jobs:
           echo var1= ${{secrets.var1}} >> .env
           echo var2= ${{secrets.var2}} >> .env
           echo var3= ${{secrets.var3}} >> .env
-
+          echo "test1"
           echo "URL is $var1" | sed 's/./& /g'
           echo "URL is $var2" | sed 's/./& /g'
           echo "URL is $var3" | sed 's/./& /g'
